--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap.css.map">
     <link rel="stylesheet" href="css/bootstrap.css">
 
-    <link rel="icon" type="image/x-icon" href="./img/logo1.jpg">
-    <link rel="stylesheet" type="text/css" href="../html/css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/logo1.jpg">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
