--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div> -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../html/img/logo-white.png"></a>
+                <a class="navbar-brand" href="#"><img src="img/logo-white.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -90,7 +90,7 @@
                         <div class="da-col-4">
                             <div class="da-images">
                                 <div class="da-gallery">
-                                    <img src="../html/img/A img1.jpg" width="100%" height="326">
+                                    <img src="img/A img1.jpg" width="100%" height="326">
                                     <div class="da-disc1">
                                         <h2>america</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -101,7 +101,7 @@
                         <div class="da-col-4">
                             <div class="da-images">
                                 <div class="da-gallery">
-                                    <img src="../html/img/A img2.jpg" width="100%" height="326">
+                                    <img src="img/A img2.jpg" width="100%" height="326">
                                     <div class="da-disc1">
                                         <h2>asia</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -112,7 +112,7 @@
                         <div class="da-col-4">
                             <div class="da-images">
                                 <div class="da-gallery">
-                                    <img src="../html/img/A img3.jpg" width="100%" height="326">
+                                    <img src="img/A img3.jpg" width="100%" height="326">
                                     <div class="da-disc1">
                                         <h2>australia</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
